--- a/LEATS Project/Views/Shared/_Layout.cshtml
+++ b/LEATS Project/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Find a Tutor", "Index", "Modules")</li>
+                    <li>@Html.ActionLink("Find a Tutor", "Index", "Tutors")</li>
                     <li>@Html.ActionLink("Become a Tutor", "Create", "TutorApplications")</li>
                     <li>@Html.ActionLink("Manage Applicatons", "Index", "TutorApplications")</li>
                    </ul>
