--- a/LEATS Project/Views/TutorApplications/Create.cshtml
+++ b/LEATS Project/Views/TutorApplications/Create.cshtml
@@ -41,16 +41,18 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AcademicTranscript, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AcademicTranscript, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AcademicTranscript, "", new { @class = "text-danger" })
+                <input type="file" id="academicTranscript" name="academicTranscript" />
+                @*@Html.EditorFor(model => model.AcademicTranscript, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AcademicTranscript, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ProofOfRegistration, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProofOfRegistration, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProofOfRegistration, "", new { @class = "text-danger" })
+                <input type="file" id="proofOfReg" name="proofOfReg" />
+                @*@Html.EditorFor(model => model.ProofOfRegistration, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProofOfRegistration, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
