--- a/LEATS Project/Views/Students/Create.cshtml
+++ b/LEATS Project/Views/Students/Create.cshtml
@@ -211,7 +211,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Skip" class="btn btn-default" />
+                @Html.ActionLink("Skip this step", "Index", "Home")
             </div>
         </div>
     </div>
