--- a/LEATS Project/Views/TutorApplications/Details.cshtml
+++ b/LEATS Project/Views/TutorApplications/Details.cshtml
@@ -32,6 +32,7 @@
                     Download Documents
                     <div>
                         <p>
+                            @Html.ActionLink("Download", "DownloadFile", new { id = Model.ApplicationID})
                             @*Academic Transcript <a href="http://go.microsoft.com/fwlink/?LinkId=403804">Download File</a>*@ 
                         </p>
 
