--- a/LEATS Project/Views/Students/Edit.cshtml
+++ b/LEATS Project/Views/Students/Edit.cshtml
@@ -19,7 +19,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.Id, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["ActiveUserEmail"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
         </div>
