--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -11,36 +11,35 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.StudentD, "StudentD", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StudentD, "StudentD", htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.StudentD, new List<SelectListItem>
            {
                new SelectListItem {Text = Session["ActiveStudentID"].ToString(), Value = Session["ActiveStudentID"].ToString(), Selected = true },
-           }, htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TutorID, "TutorID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TutorID, "TutorID", htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
             <div class="col-md-10">
                 
                 @Html.DropDownListFor(model => model.TutorID, new List<SelectListItem>
            {
                new SelectListItem {Text = Session["tutID"].ToString(), Value = Session["tutID"].ToString(), Selected = true },
-           }, htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.TutorID, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.RequestTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequestTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequestTime, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
         <div class="form-group">
             @Html.LabelFor(model => model.AppointmentDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -87,12 +86,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AppointmentStatus, htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.AppointmentStatus, new List<SelectListItem>
            {
                new SelectListItem {Text = "Pending", Value = "Pending", Selected = true },
-           }, htmlAttributes: new {@class = "form-control" })
+           }, htmlAttributes: new {@class = "form-control", @style = "display:none" })
                 @Html.ValidationMessageFor(model => model.AppointmentStatus, "", new { @class = "text-danger" })
             </div>
         </div>
