--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -11,7 +11,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.StudentD, "StudentD", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StudentD, "StudentD")
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.StudentD, new List<SelectListItem>
            {
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TutorID, "TutorID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TutorID, "TutorID")
             <div class="col-md-10">
                 
                 @Html.DropDownListFor(model => model.TutorID, new List<SelectListItem>
@@ -35,14 +35,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.RequestTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.RequestTime)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequestTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequestTime, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AppointmentDate)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AppointmentDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AppointmentDate, "", new { @class = "text-danger" })
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Time Slot", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Time Slot")
             <div class="col-md-10">
                @Html.DropDownListFor(model => model.AppointmentTime, new List<SelectListItem>
            {
@@ -66,7 +66,7 @@
         </div>
          
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentDuration, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AppointmentDuration)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AppointmentDuration, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AppointmentDuration, "", new { @class = "text-danger" })
@@ -74,7 +74,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentType, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AppointmentType)
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.AppointmentType, new List<SelectListItem>
            {
@@ -87,7 +87,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AppointmentStatus)
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.AppointmentStatus, new List<SelectListItem>
            {
@@ -98,7 +98,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentDetails, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AppointmentDetails)
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.AppointmentDetails, new List<SelectListItem>
            {
@@ -110,7 +110,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Location)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
