--- a/LEATS Project/Views/TutorApplications/Create.cshtml
+++ b/LEATS Project/Views/TutorApplications/Create.cshtml
@@ -10,7 +10,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.StudentID, "StudentID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StudentID)
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.StudentID, new List<SelectListItem>
            {
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ModuleCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ModuleCode)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ModuleCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ModuleCode, "", new { @class = "text-danger" })
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ModuleName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ModuleName)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ModuleName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ModuleName, "", new { @class = "text-danger" })
@@ -37,21 +37,21 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AcademicTranscript, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AcademicTranscript)
             <div class="col-md-10">
                 <input type="file" id="acad" name="acad" required accept="application/pdf"/>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProofOfRegistration, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProofOfRegistration)
             <div class="col-md-10">
                 <input type="file" id="proof" name="proof" required accept="application/pdf"/>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ApplicationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ApplicationDate)
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ApplicationDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ApplicationDate, "", new { @class = "text-danger" })
@@ -59,7 +59,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ApplicationStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ApplicationStatus)
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.ApplicationStatus, new List<SelectListItem>
            {
